[gd_scene load_steps=28 format=3 uid="uid://bb3vw8xpi6ib7"]

[ext_resource type="Script" path="res://script/slime.gd" id="1_gkthh"]
[ext_resource type="Texture2D" uid="uid://nhyapb4fn6rw" path="res://art/character/survivalgame-enemy-slime.png" id="2_1e4r1"]
[ext_resource type="Resource" uid="uid://bjwslriiv0h66" path="res://inventory/items/slime.tres" id="2_upg4b"]
[ext_resource type="PackedScene" uid="uid://dlworvvlwcwfe" path="res://scene/slime_collectable.tscn" id="3_5cm6c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ygodg"]
atlas = ExtResource("2_1e4r1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljvbg"]
atlas = ExtResource("2_1e4r1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_662lq"]
atlas = ExtResource("2_1e4r1")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nah58"]
atlas = ExtResource("2_1e4r1")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43x28"]
atlas = ExtResource("2_1e4r1")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ifl8"]
atlas = ExtResource("2_1e4r1")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27gi6"]
atlas = ExtResource("2_1e4r1")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq33u"]
atlas = ExtResource("2_1e4r1")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m30i"]
atlas = ExtResource("2_1e4r1")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhw1m"]
atlas = ExtResource("2_1e4r1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0540u"]
atlas = ExtResource("2_1e4r1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax2jc"]
atlas = ExtResource("2_1e4r1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0upkt"]
atlas = ExtResource("2_1e4r1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaegb"]
atlas = ExtResource("2_1e4r1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg5u1"]
atlas = ExtResource("2_1e4r1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1nta"]
atlas = ExtResource("2_1e4r1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqufw"]
atlas = ExtResource("2_1e4r1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt03q"]
atlas = ExtResource("2_1e4r1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vdghl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygodg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljvbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_662lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nah58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43x28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ifl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27gi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq33u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m30i")
}],
"loop": true,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhw1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0540u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax2jc")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0upkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaegb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg5u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1nta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqufw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt03q")
}],
"loop": true,
"name": &"move",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8258e"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4tmw2"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_f1dfx"]
radius = 42.0119

[sub_resource type="CircleShape2D" id="CircleShape2D_xdmat"]
radius = 329.656

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_gkthh")
item_res = ExtResource("2_upg4b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vdghl")
animation = &"idle"
frame_progress = 0.944902

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8258e")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_4tmw2")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_f1dfx")

[node name="SlimeCollectable" parent="." instance=ExtResource("3_5cm6c")]
visible = false

[node name="SlimeCollectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeCollectArea"]
shape = SubResource("CircleShape2D_xdmat")
disabled = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="SlimeCollectArea" to="." method="_on_slime_collect_area_body_entered"]
